exports[`Location > create() > Should create correctly 1`] = `
{
  "uri": "file:///home/spgoding/test",
  "range": {
    "start": 5,
    "end": 6
  },
  "posRange": {
    "start": {
      "line": 0,
      "character": 5
    },
    "end": {
      "line": 0,
      "character": 6
    }
  }
}
`;

exports[`Location > create() > Should create correctly 2`] = `
{
  "uri": "file:///home/spgoding/test",
  "range": {
    "start": 7,
    "end": 8
  },
  "posRange": {
    "start": {
      "line": 0,
      "character": 7
    },
    "end": {
      "line": 0,
      "character": 8
    }
  }
}
`;

exports[`Location > create() > Should create correctly 3`] = `
{
  "uri": "file:///home/spgoding/test",
  "range": {
    "start": 9,
    "end": 9
  },
  "posRange": {
    "start": {
      "line": 0,
      "character": 9
    },
    "end": {
      "line": 0,
      "character": 9
    }
  }
}
`;

exports[`Location > get() > Should create correctly 1`] = `
{
  "uri": "",
  "range": {
    "start": 0,
    "end": 0
  },
  "posRange": {
    "start": {
      "line": 0,
      "character": 0
    },
    "end": {
      "line": 0,
      "character": 0
    }
  }
}
`;

exports[`Location > get() > Should create correctly 2`] = `
{
  "uri": "file:///home/spgoding/test",
  "range": {
    "start": 0,
    "end": 0
  },
  "posRange": {
    "start": {
      "line": 0,
      "character": 0
    },
    "end": {
      "line": 0,
      "character": 0
    }
  }
}
`;

exports[`Location > get() > Should create correctly 3`] = `
{
  "uri": "",
  "range": {
    "start": 1,
    "end": 2
  },
  "posRange": {
    "start": {
      "line": 0,
      "character": 0
    },
    "end": {
      "line": 0,
      "character": 0
    }
  }
}
`;

exports[`Location > get() > Should create correctly 4`] = `
{
  "uri": "file:///home/spgoding/test",
  "range": {
    "start": 1,
    "end": 2
  },
  "posRange": {
    "start": {
      "line": 0,
      "character": 0
    },
    "end": {
      "line": 0,
      "character": 0
    }
  }
}
`;

exports[`Location > get() > Should create correctly 5`] = `
{
  "uri": "file:///home/spgoding/test",
  "range": {
    "start": 3,
    "end": 4
  },
  "posRange": {
    "start": {
      "line": 0,
      "character": 0
    },
    "end": {
      "line": 0,
      "character": 0
    }
  }
}
`;
